<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ProfinetDiagnostics" Id="{6f0e322f-903e-44d8-aa8a-0ae74a759c44}">
    <Declaration><![CDATA[TYPE ST_ProfinetDiagnostics :
STRUCT
	PnIoBoxState			AT %I* : UINT;
	PnIoBoxDiag				AT %I* : UINT;
	PnIoBoxCtrl				AT %Q* : UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>